<resources>
    <string name="app_name">Controle Notas e Frequência</string>
    <string name="ra">Ra</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="dtNasc">Dt. Nascimento</string>
    <string name="dtMatricula">Dt. Matricula</string>
    <string name="cursos">Cursos</string>
    <string name="periodo">Período</string>
    <string name="selecioneCurso">Selecione o Curso</string>
    <string name="selecionePeriodo">Selecione o Período</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="curso">Curso</string>
    <string name="addAluno">Adicionar Aluno</string>
    <string name="cadastroAluno">Cadastro Aluno</string>
    <string name="alunos">Alunos</string>
    <string name="codigoDisciplina">Codigo Disciplina</string>
    <string name="nomeDisciplina">Nome Disciplina</string>
    <string name="cargaHoraria">Carga Horária</string>
    <string name="cadastroDisciplina">Cadastro Disciplina</string>
    <string name="registro">Registro</string>
    <string name="dtAdesao">Data Adesão</string>
    <string name="selecioneTurma">Selecione Turma</string>
    <string name="turma">Turma</string>
    <string name="disciplina">Disciplina</string>
    <string name="selecioneDisciplina">Selecione Disciplina</string>
    <string name="professores">Professores</string>
    <string name="cadastroProfessor">Cadastro Professor</string>
    <string name="selecioneProfessor">Selecione o Professor</string>
    <string name="nomeProfessor">Nome Professor</string>
    <string name="codigo">Código</string>
    <string name="descricao">Descrição</string>
    <string name="dtInicio">Data início</string>
    <string name="dtTermino">Data término</string>
    <string name="selecioneTurno">Selecione o Turno</string>
    <string name="turno">Turno</string>
    <string name="regime">Regime</string>
    <string name="selecioneRegime">Selecione o Regime</string>
    <string name="turmas">Turmas</string>
    <string name="cadastroTurma">Cadastro Turma</string>
    <string name="selecioneAluno">Selecione o Aluno</string>
    <string name="edFrequencia">Informe a Frequencia</string>
    <string name="edNota">Informe a Nota</string>
    <string name="codigoTurma">Informe o Codigo da Turma</string>
    <string name="aluno">Aluno</string>
    <string name="resultadoFinal">Resultado Final</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="notasFrequencia">Notas e Frequência</string>
    <string name="cadastroNotasFrequencia">Cadastro notas e frequência</string>
    <string name="frequencia">Frequência</string>
    <string name="mediaFinal">Média Final</string>
</resources>