<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lnPrincipalNotasFrequencia"
    tools:context=".cadastronotasfrequencia.CadastroNotasFrequenciaActivity">

        <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spTurma"
        app:ms_arrowColor="?attr/colorPrimary"
        app:ms_floatingLabelText="@string/turma"
        app:ms_hint="@string/selecioneTurma"
        app:ms_multiline="false"
        android:layout_margin="10dp"/>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spAluno"
        app:ms_arrowColor="?attr/colorPrimary"
        app:ms_floatingLabelText="@string/aluno"
        app:ms_hint="@string/selecioneAluno"
        app:ms_multiline="false"
        android:layout_margin="10dp"/>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spDisciplina"
        app:ms_arrowColor="?attr/colorPrimary"
        app:ms_floatingLabelText="@string/disciplina"
        app:ms_hint="@string/selecioneDisciplina"
        app:ms_multiline="false"
        android:layout_margin="10dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/edFrequencia">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edFrequencia"
            android:inputType="number"
            android:backgroundTint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/edNota">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edNota"
            android:inputType="number"
            android:backgroundTint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>