<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/lnPrincipalTurma"
    tools:context=".cadastroTurma.CadastroTurmaActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/codigo">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edCodigoTurma"
            android:inputType="number"
            android:backgroundTint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/descricao">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edDescricaoTurma"
            android:backgroundTint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/dtInicio">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edDtInicioTurma"
                android:backgroundTint="@color/white"
                android:onClick="selecionarData"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/dtTermino">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edDtTerminoTurma"
                android:onClick="selecionarData"
                android:backgroundTint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spRegimeTurma"
        app:ms_arrowColor="?attr/colorPrimary"
        app:ms_floatingLabelText="@string/regime"
        app:ms_hint="@string/selecioneRegime"
        app:ms_multiline="false"
        android:layout_margin="10dp"/>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spPeriodoTurma"
        app:ms_hint="@string/selecionePeriodo"
        app:ms_arrowColor="?attr/colorPrimary"
        app:ms_floatingLabelText="@string/periodo"
        app:ms_multiline="false"
        android:layout_margin="10dp"/>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spTurnoTurma"
        app:ms_arrowColor="?attr/colorPrimary"
        app:ms_floatingLabelText="@string/turno"
        app:ms_hint="@string/selecioneTurno"
        app:ms_multiline="false"
        android:layout_margin="10dp"/>

</LinearLayout>