<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:onClick="listarAlunos"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        android:layout_margin="12dp">

        <TextView
            android:layout_width="210dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/alunos"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        android:layout_margin="12dp"
        android:onClick="listarProfessores">

        <TextView
            android:layout_width="210dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/professores"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        android:layout_margin="12dp"
        android:onClick="listarTurmas">

        <TextView
            android:layout_width="210dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/turmas"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        android:layout_margin="12dp"
        android:onClick="listarDisciplinas">

        <TextView
            android:layout_width="210dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/disciplinas"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        android:layout_margin="12dp"
        android:onClick="listarNotasFrequencia">

        <TextView
            android:layout_width="210dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/notasFrequencia"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>